WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76096
[BlackBerry] ASSERT failure in BackingStorePrivate::blitVisibleContents()
https://bugs.webkit.org/show_bug.cgi?id=76096
Summary
[BlackBerry] ASSERT failure in BackingStorePrivate::blitVisibleContents()
Jacky Jiang
Reported
2012-01-11 12:40:23 PST
ASSERT failure in BackingStorePrivate::blitVisibleContents(): #0 0x7c9478e8 in BlackBerry::WebKit::BackingStorePrivate::blitVisibleContents (this=0x5e1d7100, force=false) at /Users/zhajiang/dev/webkit/Source/WebKit/blackberry/Api/BackingStore.cpp:1108 #1 0x7c9444e4 in BlackBerry::WebKit::BackingStorePrivate::repaint (this=0x5e1d7100, windowRect=..., contentChanged=true, immediate=true) at /Users/zhajiang/dev/webkit/Source/WebKit/blackberry/Api/BackingStore.cpp:337 #2 0x7c97744c in BlackBerry::WebKit::WebPagePrivate::rootLayerCommitTimerFired (this=0x5e070828) at /Users/zhajiang/dev/webkit/Source/WebKit/blackberry/Api/WebPage.cpp:5491 #3 0x7c994cd0 in WebCore::Timer<BlackBerry::WebKit::WebPagePrivate>::fired (this=0x768913d0) at /Users/zhajiang/dev/webkit/Source/WebCore/platform/Timer.h:100 #4 0x7cf86c78 in WebCore::ThreadTimers::sharedTimerFiredInternal (this=0x79026790) at /Users/zhajiang/dev/webkit/Source/WebCore/platform/ThreadTimers.cpp:115 #5 0x7cf86b9c in WebCore::ThreadTimers::sharedTimerFired () at /Users/zhajiang/dev/webkit/Source/WebCore/platform/ThreadTimers.cpp:93 ...
Attachments
Patch
(1.97 KB, patch)
2012-01-11 12:58 PST
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2012-01-11 12:58:01 PST
Created
attachment 122080
[details]
Patch
Rob Buis
Comment 2
2012-01-11 13:03:48 PST
Comment on
attachment 122080
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-01-11 13:23:35 PST
Comment on
attachment 122080
[details]
Patch Clearing flags on attachment: 122080 Committed
r104738
: <
http://trac.webkit.org/changeset/104738
>
WebKit Review Bot
Comment 4
2012-01-11 13:23:39 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug