[BlackBerry] ASSERT failure in BackingStorePrivate::blitVisibleContents() https://bugs.webkit.org/show_bug.cgi?id=76096

Patch by Jacky Jiang <zhajiang@rim.com> on 2012-01-11
Reviewed by Rob Buis.

We shouldn't blit visible contents for direct rendering. Guard it from
call sites.

* blackberry/Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::repaint):
(BlackBerry::WebKit::BackingStorePrivate::slowScroll):

Canonical link: https://commits.webkit.org/92909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104738 268f45cc-cd09-0410-ab3c-d52691b4dbfc